RESOLVED FIXED305504
[iOS] Internal builds are broken: MediaPlayerPrivateWirelessPlayback.h: incomplete result type 'DestinationColorSpace'
https://bugs.webkit.org/show_bug.cgi?id=305504
Summary [iOS] Internal builds are broken: MediaPlayerPrivateWirelessPlayback.h: incom...
Abrar Rahman Protyasha
Reported 2026-01-14 13:48:33 PST
``` Source/WebCore/platform/graphics/MediaPlayerPrivateWirelessPlayback.h:84:27: error: incomplete result type 'DestinationColorSpace' in function definition ¦84 | DestinationColorSpace colorSpace() final { return DestinationColorSpace::SRGB(); } In file included from DerivedSources/WebCore/unified-sources/UnifiedSource356.cpp:1: In file included from Source/WebCore/platform/graphics/MediaPlayerPrivateWirelessPlayback.cpp:27: In file included from Source/WebCore/platform/graphics/MediaPlayerPrivateWirelessPlayback.h:30: In file included from Source/WebCore/platform/graphics/MediaPlayerPrivate.h:32: Source/WebCore/platform/graphics/MediaPlayer.h:85:7: note: forward declaration of 'WebCore::DestinationColorSpace' ¦85 | class DestinationColorSpace; ```
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-14 13:48:39 PST
Abrar Rahman Protyasha
Comment 2 2026-01-14 13:52:16 PST
EWS
Comment 3 2026-01-14 14:01:21 PST
Committed 305605@main (c7a40361732d): <https://commits.webkit.org/305605@main> Reviewed commits have been landed. Closing PR #56586 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.