[iOS] Internal builds are broken: MediaPlayerPrivateWirelessPlayback.h: incomplete result type 'DestinationColorSpace' https://bugs.webkit.org/show_bug.cgi?id=305504 rdar://168168554

Unreviewed, fix the build by including the DestinationColorSpace.h, thus
pulling in the enum class definition.

* Source/WebCore/platform/graphics/MediaPlayerPrivateWirelessPlayback.h:

Canonical link: https://commits.webkit.org/305605@main